--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Core dump
 email: ""
 description: >- # this means to ignore newlines until "baseurl:"
-  Dumping my working memory. Or in humanese, blogging my journy as a Software Engineer. 
+  Dumping my working memory. Or in humanese, blogging my journey as a Software Engineer. 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
